[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ent/MagicMissile.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ent/SplittingMagicMissile.gd" type="Script" id=2]

[node name="MagicMissile" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="DestroyTimer" parent="." index="2"]
wait_time = 0.25

[node name="ForwardMissileSource" type="Spatial" parent="." index="3"]

[node name="LeftMissileSource" type="Spatial" parent="." index="4"]
transform = Transform( 0.996195, 0, 0.0871557, 0, 1, 0, -0.0871557, 0, 0.996195, 0, 0, 0 )

[node name="RightMissileSource" type="Spatial" parent="." index="5"]
transform = Transform( 0.996195, 0, -0.0871557, 0, 1, 0, 0.0871557, 0, 0.996195, 0, 0, 0 )
